@@ -357,3 +357,11 @@ def test_set_interface_description(lldpd, lldpcli, namespaces, links):
         # Alias should be set
         alias = open("/sys/class/net/eth0/ifalias").read().strip()
         assert alias == "lldpd: connected to ns-2.example.com"
+        # Alias should not be sent to neighbor
+        lldpcli("update")
+    time.sleep(1)
+    with namespaces(2):
+        out = lldpcli("-f", "keyvalue", "show", "neighbors", "details")
+        print(out)
+        assert out['lldp.eth1.port.descr'] == 'eth0'
+
